RESOLVED FIXED181365
Copying, pasting, and then deleting an attachment element breaks attachment data requests
https://bugs.webkit.org/show_bug.cgi?id=181365
Summary Copying, pasting, and then deleting an attachment element breaks attachment d...
Wenson Hsieh
Reported 2018-01-06 10:47:55 PST
To reproduce: 1. Copy an attachment element 2. Paste the element 3. Delete the element Observe: -[_WKAttachment requestData:] no longer works!
Attachments
Patch (18.67 KB, patch)
2018-01-07 16:29 PST, Wenson Hsieh
no flags
Fix API tests on macOS (18.76 KB, patch)
2018-01-07 18:18 PST, Wenson Hsieh
no flags
Radar WebKit Bug Importer
Comment 1 2018-01-07 14:42:43 PST
Wenson Hsieh
Comment 2 2018-01-07 16:29:49 PST
Wenson Hsieh
Comment 3 2018-01-07 18:18:16 PST
Created attachment 330666 [details] Fix API tests on macOS
Wenson Hsieh
Comment 4 2018-01-08 14:14:23 PST
Comment on attachment 330666 [details] Fix API tests on macOS Thanks for the review!
WebKit Commit Bot
Comment 5 2018-01-08 14:19:18 PST
Comment on attachment 330666 [details] Fix API tests on macOS Clearing flags on attachment: 330666 Committed r226539: <https://trac.webkit.org/changeset/226539>
WebKit Commit Bot
Comment 6 2018-01-08 14:19:20 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.